# loongsuite-python-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-loongsuite.md  CHANGELOG.md  README-zh.md  README.md  copilot-instructions.md  dev-requirements.txt  docs-requirements.txt  pkg-requirements.txt  tox-loongsuite.ini  tox.ini
.cursor/: .gitignore
.cursor/commands/: analyze-project-and-locate-instrumentation-points.md  extract-telemetry-data.md  implement-instrumentation-framework.md
.cursor/rules/: code-quality-check.mdc  extract-telemetry-data-best-practices.mdc  framework-types-and-operations.mdc  implement-instrumentation-framework.mdc  locate-instrumentation-points.mdc
.github/: component_owners.yml
.github/scripts/: sync-upstream-with-rebase.sh  sync-upstream.sh
.github/workflows/: loongsuite-release.yml  loongsuite_lint_0.yml  loongsuite_misc_0.yml  loongsuite_test_0.yml  sync-upstream.yml
dist-pypi/: loongsuite_distro-0.1b0-py3-none-any.whl  loongsuite_util_genai-0.1b0-py3-none-any.whl
docs/: loongsuite-release.md  pr-summary-docs-integration.md
instrumentation-genai/: README.md
instrumentation-genai/opentelemetry-instrumentation-anthropic/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-claude-agent-sdk/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-dify/: README.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-google-adk/: README.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-google-adk/examples/: main.py  tools.py
instrumentation-genai/opentelemetry-instrumentation-google-adk/src/opentelemetry/: __init__.py
instrumentation-genai/opentelemetry-instrumentation-google-adk/src/opentelemetry/instrumentation/: __init__.py
instrumentation-genai/opentelemetry-instrumentation-google-adk/src/opentelemetry/instrumentation/google_adk/: __init__.py  package.py  version.py
instrumentation-genai/opentelemetry-instrumentation-google-adk/src/opentelemetry/instrumentation/google_adk/internal/: __init__.py  _extractors.py  _metrics.py  _plugin.py  _utils.py
instrumentation-genai/opentelemetry-instrumentation-google-adk/tests/: __init__.py  test_metrics.py  test_plugin_integration.py  test_utils.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-mcp/: CHANGELOG.md  pyproject.toml  test-requirements-0.txt
instrumentation-genai/opentelemetry-instrumentation-mcp/src/opentelemetry/instrumentation/mcp/: __init__.py  handler.py  session_handler.py  utils.py
instrumentation-genai/opentelemetry-instrumentation-openai-agents-v2/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-v2/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-vertexai/: pyproject.toml
instrumentation-loongsuite/: README.md
instrumentation-loongsuite/loongsuite-instrumentation-agentscope/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-agno/: CHANGELOG.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-anthropic/: README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-claude-agent-sdk/: CHANGELOG.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-litellm/: CHANGELOG.md  README.rst  example.py  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-litellm/src/opentelemetry/instrumentation/litellm/: __init__.py  _embedding_wrapper.py  _stream_wrapper.py  _utils.py  _wrapper.py  arms_litellm_extension.py  package.py  version.py
instrumentation-loongsuite/loongsuite-instrumentation-litellm/tests/: conftest.py  test_embedding.py  test_error_handling.py  test_retry.py  test_stream_completion.py  test_sync_completion.py  test_tool_calls.py  test_utils.py
instrumentation-loongsuite/loongsuite-instrumentation-openai-agents/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-openai-agents/src/opentelemetry/instrumentation/openai_agents/: __init__.py  _processor.py  package.py
instrumentation-loongsuite/loongsuite-instrumentation-openai-agents/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_instrumentor.py  test_processor.py
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/examples/: basic_agent.py  tool_agent.py
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/src/opentelemetry/instrumentation/pydantic_ai/: __init__.py  package.py  utils.py
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/tests/: conftest.py  test_instrumentor.py
instrumentation-loongsuite/loongsuite-instrumentation-sweagent/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-sweagent/examples/: basic_example.py
instrumentation-loongsuite/loongsuite-instrumentation-sweagent/src/opentelemetry/instrumentation/sweagent/: __init__.py  package.py  patch.py
instrumentation-loongsuite/loongsuite-instrumentation-sweagent/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_spans.py
loongsuite-distro/: BOOTSTRAP_REVIEW.md  README.rst  pyproject.toml
loongsuite-site-bootstrap/: README.md  pyproject.toml
opentelemetry-instrumentation/: pyproject.toml
processor/loongsuite-processor-baggage/: CHANGELOG.md  README.rst  pyproject.toml  test-requirements.txt
processor/loongsuite-processor-baggage/src/loongsuite/processor/baggage/: __init__.py  processor.py
processor/loongsuite-processor-baggage/tests/: test_baggage_processor.py
scripts/: build_loongsuite_package.py  dry_run_loongsuite_release.sh  generate_loongsuite_bootstrap.py  generate_loongsuite_readme.py  loongsuite-build-config.json
scripts/loongsuite/: build_loongsuite_package.py  (+7 more)
(+375 files in other folders)
