[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-google-adk"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Google Agent Development Kit (ADK)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "OpenTelemetry Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opentelemetry-api ~= 1.27",
    "opentelemetry-sdk ~= 1.27",
    "opentelemetry-semantic-conventions ~= 0.48b0",
    "wrapt >= 1.0.0, < 2.0.0",
    "google-adk >= 0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-cov >= 4.0.0",
    "google-adk >= 0.1.0",
]
instruments = [
    "google-adk >= 0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/loongsuite-python-agent"

[project.entry-points.opentelemetry_instrumentor]
google-adk = "opentelemetry.instrumentation.google_adk:GoogleAdkInstrumentor"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=opentelemetry/instrumentation/google_adk --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]


