[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-mcp"
dynamic = ["version"]
description = "OpenTelemetry MCP (Model Context Protocol) instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8, <=3.13"
authors = [
  { name = "LoongSuite Python Agent Authors", email = "qp467389@alibaba-inc.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "wrapt"
]

[project.optional-dependencies]
instruments = [
  "mcp >= 1.3.0, <=1.10.4",
]
test = [
  "mcp >= 1.3.0, <=1.10.4",
  "pytest",
  "opentelemetry-sdk",
]
type-check = []

[project.entry-points.opentelemetry_instrumentor]
mcp = "opentelemetry.instrumentation.mcp:MCPClientInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-genai/opentelemetry-instrumentation-mcp"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/mcp/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]