[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-openai-agents"
dynamic = ["version"]
description = "LoongSuite OpenAI Agents SDK instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
  { name = "minimAluminiumalism", email = "caixuesen@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-instrumentation ~= 0.58b0",
  "opentelemetry-semantic-conventions ~= 0.58b0",
  "opentelemetry-util-genai",
]

[project.optional-dependencies]
instruments = [
  "openai-agents >= 0.0.7",
]

[project.entry-points.opentelemetry_instrumentor]
openai_agents = "opentelemetry.instrumentation.openai_agents:OpenAIAgentsInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-openai-agents"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/openai_agents/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
