[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-sweagent"
dynamic = ["version"]
description = "LoongSuite instrumentation for SWE-agent (GenAI spans via util-genai)"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "LoongSuite Python Agent Authors", email = "qp467389@alibaba-inc.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-instrumentation >= 0.58b0",
  "opentelemetry-semantic-conventions >= 0.58b0",
  "opentelemetry-util-genai >= 0.2b0",
  "wrapt >= 1.17.3",
]

[project.optional-dependencies]
instruments = [
  "sweagent >= 1.1.0",
]

[project.entry-points.opentelemetry_instrumentor]
sweagent = "opentelemetry.instrumentation.sweagent:SweagentInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/sweagent/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
